rename entry file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "url-shortener",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/vanessayip/url-shortener/issues"
   },
-  "homepage": "https://github.com/vanessayip/url-shortener#readme"
+  "homepage": "https://github.com/vanessayip/url-shortener#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
